[package]
name = "usque-rs"
version = "0.1.0"
edition = "2021"
description = "Tiny Rust MASQUE (CONNECT-IP) client for Cloudflare WARP (unofficial)"
license = "MIT"

[[bin]]
name = "usque-rs"
path = "src/main.rs"

[dependencies]
quiche = { version = "0.22", features = ["boringssl-vendored"] }
octets = "0.3"

tokio = { version = "1", features = ["io-util", "net", "macros", "rt-multi-thread", "time"] }
mio = { version = "1", features = ["net", "os-poll"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
rcgen = "0.13"
pem = "3"
x509-parser = "0.16"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
sec1 = { version = "0.7", features = ["pkcs8", "der", "pem"] }
der = { version = "0.7", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem", "std"] }
tun = { version = "0.7", features = ["async"] }
rtnetlink = "0.20"
netlink-packet-route = "0.21"
futures = "0.3"
tempfile = "3"
time = "0.3"
# Software fallback for 64-bit atomics on targets without native support (e.g. armv5te)
portable-atomic = { version = "1", features = ["fallback"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
